kube/newman_www-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newman-www-deployment
  labels:
    app.kubernetes.io/name: newman-www
    app.kubernetes.io/instance: newman-www-v1
    app.kubernetes.io/component: frontend
    app: newman-www
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: newman-www
      app.kubernetes.io/instance: newman-www-v1
      app.kubernetes.io/component: frontend
      app: newman-www
  template:
    metadata:
      labels:
        app.kubernetes.io/name: newman-www
        app.kubernetes.io/instance: newman-www-v1
        app.kubernetes.io/component: frontend
        app: newman-www
    spec:
      containers:
      - name: newman-www
        image: registry.digitalocean.com/pjh/newman-www@sha256:f31eb8206138a2b9eb90703755cfce9406968284331fd04ba0c85d6292db0818
        ports:
        - containerPort: 3000
