kube/newman_www-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newman-www-service
spec:
  selector:
    app.kubernetes.io/name: newman-www
    app.kubernetes.io/instance: newman-www-v1
    app.kubernetes.io/component: frontend
    app: newman-www
  ports:
    - port: 3000
