kube/02-newman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newman-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cmunewman.com
      secretName: newman-tls
  rules:
    - host: cmunewman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newman-service
                port:
                  number: 3000
