kube/03-newman-www-middleware-and-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newman-www-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Redirect to the root domain
    traefik.ingress.kubernetes.io/router.middlewares: default-newman-www-redirect-to-root-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.cmunewman.com
      secretName: newman-www-tls
  rules:
    - host: www.cmunewman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newman-service
                port:
                  number: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: newman-www-redirect-to-root-middleware
  namespace: default
spec:
  redirectRegex:
    regex: ^https?://www\.cmunewman\.com/(.*)
    replacement: https://cmunewman.com/$1
    permanent: true
