kube/newman_www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newman-www-temp-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - newman.servermogul.com
      secretName: newman-www-temp-tls
  rules:
    - host: newman.servermogul.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newman-www-service
                port:
                  number: 3000
